# sfplugin

./: .gitmodules  CMakeLists.txt  readme.md
src/: CMakeLists.txt  DistrhoPluginInfo.h  SFPluginDSP.cpp  SFPluginUI.cpp
